fixed code wrapping on the build output page

--- a/cmd/droned/assets/css/drone.less
+++ b/cmd/droned/assets/css/drone.less
@@ -1057,6 +1057,12 @@ pre {
 
         .commit-summary {
                 float:left;
+
+                dd {
+                	overflow: hidden;
+					text-overflow: ellipsis;
+					max-width: 450px;
+                }
         }
 
         background:#FFF;
